# ratatui-email-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
docs/: SETUP.md
src/: app.rs  auth.rs  gmail.rs  lib.rs  main.rs  models.rs
src/app/: events.rs  input.rs  mod.rs  render.rs  state.rs  ui.rs
