[package]
name = "term-gui"
version = "0.1.0"
edition = "2024"
authors = ["Aritra Biswas <aritrabb@gmail.com>"]
license = "GPL-3"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
